<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/account_header">

        <Preference app:title="@string/login_twitter"
            app:key="twitter_login"
            app:summary="" />

        <Preference app:title="@string/logout_twitter"
            app:key="twitter_logout"
            app:enabled="false"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/tweet_header">

        <ListPreference
            app:defaultValue="other"
            app:entries="@array/gender_entries"
            app:entryValues="@array/gender_values"
            app:key="gender"
            app:title="@string/gender_title"
            app:summary="%1$s" />

        <ListPreference
            app:defaultValue="somewhere"
            app:entries="@array/location_entries"
            app:entryValues="@array/location_values"
            app:key="location"
            app:title="@string/location_title"
            app:summary="%1$s" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
